Update der Google Tracking Id

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ publisher: "Sebastian Kamilli"
 
 jekyll_analytics:
     GoogleAnalytics:          # Add, if you want to track with Google Analytics
-    id: G-7BHW6B6Z78          # Required - replace with your tracking id
+    id: UA-236047774-1          # Required - replace with your tracking id
     anonymizeIp: false      # Optional - Default: false - set to true for anonymized tracking
 
 
